# text2cad_improve

./: !T!.BAT  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  _gen_kg.py  beam_direct.err  beam_job.DSP  beam_job.db  beam_job.esav  beam_job.full  beam_job.mntr  beam_job.rst  file.err  pyproject.toml  requirements.txt
benchmarks/thinking_stress_v1/fixture_repo/: pyproject.toml
benchmarks/thinking_stress_v1/fixture_repo/src/mini_agent_runtime/: __init__.py  cache_cost.py  json_repair.py  messages.py  policy.py  redaction.py  security.py  tool_runtime.py
benchmarks/thinking_stress_v1/fixture_repo/tests/: test_cache_cost.py  test_json_repair.py  test_messages.py  test_policy.py  test_redaction.py  test_security.py  test_tool_runtime.py
integrations/engineering_tools/: ARCHITECTURE.md  INTEGRATION_ARCHITECTURE.md  ROADMAP.md  THREE_BACKENDS_GUIDE.md  _full_test.py  demo.py  demo_e2e_text_to_cad.py  demo_full.py  demo_full_chain.py  demo_industrial_full.py  fix_3_dialects.py  pyproject.toml  quick_test.py  quick_test_pro.py  rebuild_all_parts_fc.py  run_20_parts_suite.py  run_advanced_tests.py  run_all_parts.py  run_auto_all.py  run_complex_parts.py  run_final_audit.py  run_full_pipeline.py  run_generative_all_parts.py  run_one_case.py  run_retry_4.py  setup_engineering.py  test_shaft_fix.py
integrations/engineering_tools/_audit_output/.generative_cad_graphs/: gcad_6e11aaab4b7a.json
integrations/engineering_tools/_audit_output/.generative_cad_scripts/: run_gcad_1d962d4bf320.py  run_gcad_9dd88c6286ff.py  run_gcad_fdecbbd3cbf5.py
integrations/engineering_tools/_audit_output/_audit_output/axisymmetric_minimal/: output.metadata.json  output.step
integrations/engineering_tools/_audit_output/_audit_output/composed_disk_with_lugs/: output.metadata.json  output.step
integrations/engineering_tools/_audit_output/_audit_output/sketch_extrude_minimal/: output.metadata.json  output.step
integrations/engineering_tools/_test_ansys2/: beam.inp
integrations/engineering_tools/examples/: engineering_agent.py  self_test.py
integrations/engineering_tools/reports/: full_chain_all_cad.json  full_chain_v2.json  gear.json  gear_final.json  gear_v2.json  gear_v3.json
integrations/engineering_tools/src/seekflow_engineering_tools/: __init__.py  config.py  registry.py
integrations/engineering_tools/src/seekflow_engineering_tools/ansys/: __init__.py  apdl_runner.py  apdl_templates.py  parsers.py  template_registry.py  tools.py
integrations/engineering_tools/src/seekflow_engineering_tools/cadquery_backend/: __init__.py  builder.py  compiler.py  inspector.py  primitive_compiler.py  recipes.py  tools.py
integrations/engineering_tools/tests/: test_ansys_fail_closed.py  test_ansys_runner_mock.py  test_ansys_template_registry.py  test_ansys_template_validation.py  test_axisymmetric_turbine_disk_compiler.py  test_axisymmetric_turbine_disk_mechanical_validation.py  test_axisymmetric_turbine_disk_metadata.py  test_axisymmetric_turbine_disk_parameters.py  test_axisymmetric_turbine_disk_registry.py  test_cad_ir_schema.py  test_cadquery_backend.py  test_cadquery_builder_fail_closed.py  test_capability_registry.py  test_capability_registry_primitives.py  test_compileall.py  test_demo_full_chain_gear.py  test_demo_full_chain_generic_primitive.py  test_demo_full_chain_turbine_disk.py  test_engineering_build_cad_model.py  test_engineering_validate_cad_ir_primitives.py  test_future_primitive_support_contract.py  test_gear_metadata_sidecar.py  test_gear_validation.py  test_generative_axisymmetric_base.py  test_generative_base_registry.py  test_generative_builder.py  test_generative_cad_ir.py  test_generative_graph_validation.py  test_generative_metadata.py  test_generative_no_main_chain_pollution.py  test_generative_preflight.py  test_generative_repair_governor.py  test_generative_sketch_extrude_base.py  test_generative_tools.py  test_geometry_primitives_registry.py  test_inspection_validation.py  test_involute_spur_gear_cadquery_build.py  test_involute_spur_gear_dimensions.py  test_involute_spur_gear_parameters.py  test_natural_language_tools_registered.py  (+23 more)
integrations/engineering_tools/tests/generative_cad/: test_artifact_state_machine.py  test_authoring_pipeline.py  test_base_package_registry.py  test_complex_final_regression.py  test_dialect_governance.py  test_dual_route_isolation.py  test_gcad_core_v2.py  test_gcad_hardening.py  test_gcad_operation_extension.py  test_gcad_v03_composition_validation.py  test_gcad_v03_dialect_semantics.py  test_gcad_v05_legacy_isolation.py  test_gcad_v05_metadata_hard_validation.py  test_gcad_v05_pipeline_hardening.py  test_gcad_v05_repair_patch.py  test_gcad_v05_skills.py  test_gcad_v06_artifact_builder.py  test_gcad_v06_legacy_isolation.py  test_gcad_v06_pipeline_single_pass.py  test_gcad_v06_repair_patch.py  test_gcad_v07_import_gate_flags.py  test_gcad_v07_legacy_isolation.py  test_gcad_v07_native_import_wrappers.py  test_gcad_v07_report_schema.py  test_gcad_v07_run_metadata.py  test_gcad_v07_runtime_postconditions.py  test_gcad_v08_builder_artifact_consistency.py  test_gcad_v08_import_gate_flags.py  test_gcad_v08_legacy_isolation.py  test_gcad_v08_native_import_wrappers.py  test_gcad_v08_prompts.py  test_gcad_v08_repair_patch.py  test_gcad_v08_run_metadata_modes.py  test_gcad_v09_builder_artifact_consistency.py  test_gcad_v09_builder_initial_metadata.py  test_gcad_v09_import_gate_release.py  test_gcad_v09_legacy_isolation.py  test_gcad_v09_metadata_normalization.py  test_gcad_v09_native_wrapper_behavior.py  test_gcad_v09_prompt_paths.py  (+40 more)
integrations/engineering_tools/tests/golden_models/: block_with_hole.yaml  flanged_hub.yaml  l_bracket.yaml  spur_gear.yaml  stepped_block.yaml
integrations/engineering_tools/tests/text_to_cad_real/: __init__.py  conftest.py  test_real_axisymmetric_parts.py  test_real_composition_parts.py  test_real_fan_blade.py  test_real_hex_nut.py  test_real_negative_safety.py  test_real_regression_corpus.py  test_real_repair_loop.py  test_real_sketch_extrude_parts.py  test_real_spur_gear.py
(+4757 files in other folders)
