[project]
name = "seekflow"
version = "0.3.7"
description = "DeepSeek-native zero-trust tool gateway — Level 3 candidate with manifest-based external tool sandboxing. Policy-enforced, runner-isolated, fail-closed."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SeekFlow Contributors"},
]
keywords = [
    "deepseek",
    "tool-calling",
    "function-calling",
    "json-repair",
    "agent",
    "llm",
    "ai",
    "mcp",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
    "jsonschema>=4.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/WYZAAACCC/SeekFlow"
Repository = "https://github.com/WYZAAACCC/SeekFlow"
Issues = "https://github.com/WYZAAACCC/SeekFlow/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
otel = ["opentelemetry-api>=1.0.0", "opentelemetry-sdk>=1.0.0"]
security = ["cryptography>=42"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "cryptography>=42",
]

[project.scripts]
seekflow = "seekflow.cli:app"
sf = "seekflow.cli:app"

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = [
    "^build/",
    "^benchmarks?/",
    "^examples/",
]
# Modules that still need type fixes (progressive rollout)
[[tool.mypy.overrides]]
module = [
    "seekflow.runtime",
    "seekflow.async_runtime",
    "seekflow.agent.*",
    "seekflow.mcp.*",
    "seekflow.compat.*",
    "seekflow.batch_client",
    "seekflow.search",
    "seekflow.eval.*",
    "seekflow.cli",
    "seekflow.fim",
    "seekflow.structured",
    "seekflow.balance",
    "seekflow.truncation",
]
ignore_errors = true
