[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mini_agent_runtime"
version = "0.1.0"
description = "Miniature agent runtime for benchmark — contains deliberate bugs for repair tasks"

[tool.pytest.ini_options]
testpaths = ["tests"]
